--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -28,7 +28,9 @@
             </section>
             <section>
                 <h2>About Us</h2>
-                <section>Latest news section
+            </section>
+            <section>
+                <h2>Latest news</h2>
                 <article>Article 1</article>
                 <article>Article 2</article>
                 <article>Article 3</article>
