--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -77,7 +77,7 @@
                             <h3><a href="#">Web Development</a></h3>
                         </article>
                         <article>
-                            <div><img src="images/pic-work-03.jpeg" alt=""></div>
+                            <div><img src="images/pic-work-03.jpg" alt=""></div>
                             <h3><a href="#">Personal Brand</a></h3>
                         </article>
                     </div>
